push in to online host

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
 <!-- Navbar -->
 <nav class="navbar lpnav navbar-expand-lg bg-dark navbar-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/home"><b>CareClub</b></a>
+    <a class="navbar-brand" href="/"><b>CareClub</b></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -40,7 +40,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         
         <li class="nav-item">
@@ -256,7 +256,7 @@
             <!-- <input type="file" name="Image_URL"> -->
             <input type="submit" class="btn-22" value="Submit">
             <h5>OR</h5>
-            <button class="gsi-material-button" onclick="location.href='http://localhost:3000/auth/google?scope=email'" type="button">
+            <button class="gsi-material-button" onclick="location.href='https://careclub-yfue.onrender.com/auth/google?scope=email'" type="button">
                 <div class="gsi-material-button-state"></div>
                 <div class="gsi-material-button-content-wrapper">
                   <div class="gsi-material-button-icon">
@@ -277,7 +277,7 @@
             <h1>Sign in</h1>
             <div class="social-container">
              <!-- google button -->
-                <button class="gsi-material-button" onclick="location.href='http://localhost:3000/auth/google?scope=email'" type="button">
+                <button class="gsi-material-button" onclick="location.href='https://careclub-yfue.onrender.com/auth/google?scope=email'" type="button">
                     <div class="gsi-material-button-state"></div>
                     <div class="gsi-material-button-content-wrapper">
                       <div class="gsi-material-button-icon">
@@ -377,7 +377,7 @@
         <br><br><a href="#" style="color: white">Forgot password?</a><br><br>
         <input type="submit" value="Login" style="border-radius: 30px;width:18em;" />
         <p style="font-size:30px;color: aliceblue;"><b>OR</b></p>
-        <button class="gsi-material-button" onclick="location.href='http://localhost:3000/auth/google?scope=email'" type="button">
+        <button class="gsi-material-button" onclick="location.href='https://careclub-yfue.onrender.com/auth/google?scope=email'" type="button">
           <div class="gsi-material-button-state"></div>
           <div class="gsi-material-button-content-wrapper">
             <div class="gsi-material-button-icon">
