--- a/views/Trending.ejs
+++ b/views/Trending.ejs
@@ -28,7 +28,7 @@
  <!-- Navbar -->
  <nav class="navbar lpnav navbar-expand-lg bg-dark navbar-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/home"><b>CareClub</b></a>
+    <a class="navbar-brand" href="/"><b>CareClub</b></a>
     <button
       class="navbar-toggler"
       type="button"
@@ -43,7 +43,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         
         <li class="nav-item">
