--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,29 +15,29 @@
 </head>
 
 <body class='body'>
-<nav class="navbar navbar-expand-lg " style="color: white;">
-  <a class="navbar-brand text-light" href="#"><b>Care Club</b></a>
-  <button class="navbar-toggler text-light"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon text-light"></span>
+<nav class="navbar navbar-expand-lg">
+  <a class="navbar-brand" href="#" style="color:#e84d74"><b>Care Club </b>&nbsp;</a>
+  <button class="navbar-toggler navbar-dark"   type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon text-dark "></span>
   </button>
 
-  <div class="collapse navbar-collapse " id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto ">
+  <div class="collapse navbar-collapse text-dark " id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto text-dark ">
       <li class="nav-item itemactive ">
-        <a class="nav-link text-light " href="/events"><b>Events</b> <span class="sr-only">(current)</span></a>
+        <a class="nav-link text-dark " href="/events"><b>Events</b> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-light " href="/trending"><b>Trending</b></a>
+        <a class="nav-link   text-dark" href="/trending"><b>Trending</b></a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link  text-light dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link   text-dark dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <b>Account</b>
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: black;">
-          <a class="dropdown-item text-light" href="/login">Signup</a>
-          <a class="dropdown-item text-light" href="/login">LogIn</a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown" >
+          <a class="dropdown-item text-dark " href="/login">Signup</a>
+          <a class="dropdown-item  text-dark" href="/login">LogIn</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-light" href="/profile">See More</a>
+          <a class="dropdown-item  text-dark" href="/profile">See More</a>
         </div>
       </li>
       
@@ -54,8 +54,8 @@
 		<div class="container">
 		<section class="a2">
 
-			<h2 class="hrwline" style="background-color: black;"><span>ABOUT US</span></h2>
-			<p class="aboutus"><b>Care Club is a Platform</b> which provides the power to people by people and for people to do <b>Betterment of the society</b></p>
+			<h2 class="hrwline" style="color:#e84d74"><span>ABOUT US</span></h2>
+			<p class="aboutus"><b class=" headcare">Care Club </b><b> is a Platform</b> which provides the power to people by people and for people to do <b>Betterment of the society</b></p>
 		
 		</section>
 
@@ -178,11 +178,11 @@ It is been said that doing good for someone else interrupts tension-producing pa
 </section>
 		</div><!-- container ends-->
 		
-	<section class="benifits" style="background-color: purple;color: white;">
+	<section class="benifits" style="background-color:#b0DDE4;color: white;">
 		
 		<div class="container">
 		<br>
-		<h1 class="benefitstitle">Care Club Member Benefits</h1>
+		<h1 class="benefitstitle"><b class=" headcare">Care Club </b>&nbsp;Member Benefits</h1>
 		<br>
 		<p class="textbenefits"><a href="signup.php">Signup</a> to create a campaign or to volunteer for <b>Changing the World.</b></p><br>
 		<div class="benefitsicons">
@@ -226,7 +226,7 @@ It is been said that doing good for someone else interrupts tension-producing pa
 <br>
 <div class="container">
 	<section class="greatcamps">
-		<h2 class="hrwline"><span>Some Great Campigns</span></h2>
+		<h2 class="hrwline" style="color: #e84d74;"><span>Some Great Campigns</span></h2>
 
 
 		<div class="card-deck">
