--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,32 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Tac+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+  
+/* @import url('https://fonts.googleapis.com/css2?family=Allura&family=Caveat:wght@400..700&family=Labrada:ital,wght@0,100..900;1,100..900&family=Montez&family=Paprika&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Caveat:wght@400..700&family=Gabriela&family=Labrada:ital,wght@0,100..900;1,100..900&family=Montez&family=Paprika&family=Rubik+Gemstones&display=swap');
 .navbar{
-  font-family: "Paprika", system-ui;
-  font-weight: 400;
+  font-family: "Labrada", system-ui;
+  /* font-weight: 400; */
+  font-size: larger;
   font-style: normal;
-  background-color: black;
-  box-shadow: 1px 1px 1px 1px rgba(12, 126, 219, 0.4);
+  background-color: hsla(0, 0%, 100%, .72);
+  backdrop-filter: saturate(180%) blur(20px);
+  position: sticky;
+  z-index:999;
+  
+  top:0;
+  box-shadow:0 1px 0 hsla(240,2%,54%,.4);
+}
+.navbar-brand{
+  font-weight:600;
+  font-size: 40px;
+  font-family: "Tac One", sans-serif;
 }
 body{
-  font-family: "Gabriela", system-ui;
+  /* background-color:black; */
+  /* background-color: white; */
+  background:linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.5)) ,url("../images/webimg/loginbg10.jpg") no-repeat;
+  background-size: cover;
+
+    font-family: "Gabriela", system-ui;
+    /* display: none; */
+}
+#signUp:hover, #signIn:hover{
+  color: #e84d74;
 }
 .modal{
   z-index: 99999;
 }
 @media only screen and (min-width: 801px) {
-  body{
-  background: #000000;  /* fallback for old browsers */
-  /* background: -webkit-linear-gradient(to right, #5c02d3bf, #5810b7bf);  
-  background: linear-gradient(to left, #b80a9e,#aa2be6);  */
-  /* background-color: red; */
-  
-  /* display: flex; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* flex-direction: column; */
-  font-family: "Gabriela", system-ui; 
-  /* height: 100vh; */
-  /* margin: -20px 0 10px; */
-  }
+
   .mobnav{
     display: none;
   }
@@ -124,13 +135,15 @@ body{
     width: 100%;
   }
   .laptop_begin{
-    height: 75vh;
+    height: 87vh;
   }
   .laptop_begin .container {
     background-color: #fff;
     border-radius: 10px;
     border: 3px;
-    box-shadow: rgba(3, 102, 214, 0.4) 0px 0px 8px 12px;
+    /* box-shadow: rgba(3, 102, 214, 0.4) 0px 0px 8px 12px; */
+    box-shadow: 1px 1px 4px 2px #e84d74;
+
      /* box-shadow: 2px 2px 2px 2px rgba(12, 126, 219, 2); Whitish shadow */
     position: relative;
     overflow: hidden;
@@ -430,8 +443,9 @@ body{
       /* background: linear-gradient(to left, #b80a9e,#aa2be6); */
   
       /* background-repeat: no-repeat; */
-      
-      background-color: #000000;
+      background:linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.5)) ,url("../images/webimg/loginbg.jpg") no-repeat;
+
+      /* background-color: #000000; */
     }
     .mobile_begin{
       height:85vh;
